# massivesearch

./: README.md  pyproject.toml
examples/book/: aggregate.py  book.ipynb  book_price_search_engine.py  book_search_result.py  book_spec.yaml  book_text_search_engine.py  books.csv  data_loader.py  main.py  price_search_engine.py  search_result.py  text_search_engine.py
massivesearch/: __init__.py
massivesearch/aggregator/: __init__.py  aggregator.py  base.py
massivesearch/ext/: __init__.py
massivesearch/index/: __init__.py  base.py  bool.py  date.py  number.py  text.py  vector.py
massivesearch/model/: __init__.py  azure_openai.py  base.py
massivesearch/pipe/: __init__.py  pipe.py  prompt.py  registry.py  spec_index.py  validator.py
massivesearch/search_engine/: __init__.py  base.py  bool_engine.py  date_engine.py  number_engine.py  text_engine.py  vector_engine.py
massivesearch/spec/: __init__.py  builder.py  spec.py  validator.py
massivesearch/worker/: __init__.py  worker.py
src/search_engine/: base_engine.py  date_engine.py  number_engine .py  number_engine.py  text_engine.py
supersearch/index/: __init__.py  base.py  bool.py  date.py  hub.py  index_file_validator.py  number.py  text.py  vector.py
supersearch/model/: azure_openai.py  base.py
supersearch/search_engine/: __init__.py  base_engine.py  bool_engine.py  date_engine.py  hub.py  number_engine.py  text_engine.py  vector_engine.py
supersearch/spec/: __init__.py  base_index.py  base_search_engine.py  builder.py  spec.py  spec_validator.py  validator.py
supersearch/worker/: __init__.py  (+1 more)
(+42 files in other folders)
