[project]
name = "supersearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.5",
]
