[project]
name = "supersearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.21.0",
    "openai>=1.72.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.5",
    "setuptools>=78.1.0",
]
