[project]
name = "massivesearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.21.0",
    "openai>=1.72.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.5",
    "setuptools>=78.1.0",
    "types-pyyaml>=6.0.12.20250402",
]
